Update(chatbot-widget): Revamp UI and enhance functionality with quick buttons and improved message handling